Bug 1311523 Allow multiple windows to be paused for SharedWorkers. r=baku